changed to utf8

--- a/bio.html
+++ b/bio.html
@@ -6,9 +6,11 @@
   <script src="bio.js"></script>
 </head>
 <body>
-  <p id="infopanel"> Инфо: </p>
-  <canvas id="canv" width="640" height="480"> Если вы это видите, ваш браузер не поддерживает canvas</canvas>
+  <p id="infopanel"> Г€Г­ГґГ®: </p>
+  <canvas id="canv" width="640" height="480"> Г…Г±Г«ГЁ ГўГ» ГЅГІГ® ГўГЁГ¤ГЁГІГҐ, ГўГ Гё ГЎГ°Г ГіГ§ГҐГ° Г­ГҐ ГЇГ®Г¤Г¤ГҐГ°Г¦ГЁГўГ ГҐГІ canvas</canvas>
   <br>
-  <BUTTON id="ButtonTimer">Вкл.таймер</BUTTON>
+  <BUTTON id="ButtonTimer">Г‚ГЄГ«.ГІГ Г©Г¬ГҐГ°</BUTTON>
 </body>
 </html>
+
+<!-- changed to utf8 -->
